--- a/package.json
+++ b/package.json
@@ -16,5 +16,15 @@
   "bugs": {
     "url": "https://github.com/kwlucas/Tech-Blog/issues"
   },
-  "homepage": "https://github.com/kwlucas/Tech-Blog#readme"
+  "homepage": "https://github.com/kwlucas/Tech-Blog#readme",
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "connect-session-sequelize": "^6.1.1",
+    "dotenv": "^16.0.2",
+    "express": "^4.18.1",
+    "express-handlebars": "^5.3.1",
+    "express-session": "^1.17.0",
+    "mysql2": "^2.3.3",
+    "sequelize": "^5.21.2"
+  }
 }
